fix item spacing

--- a/src/components/RestaurantCard/RestaurantCard.module.css
+++ b/src/components/RestaurantCard/RestaurantCard.module.css
@@ -60,7 +60,7 @@
 .item {
   color: var(--darkGray);
   font-weight: 600;
-  line-height: 0.6rem;
+  margin: 0.8rem 0;
 }
 
 @media only screen and (max-width: 1000px) {
